welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: Unmatched closing brace '}' ignored here
}
^